Renamed fuzzers and headers files with new system extension of: .jbrf